tdf#130252: Impress: Clone formatting not cloning highlight color

See https://bugs.documentfoundation.org/show_bug.cgi?id=130252#c5 for full analysis

Change-Id: Ie87663c716a6ed31f753e0db5519436f6947aad4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136785
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 7b49b3ebc17378566942e7b263e0e5f2b400dbd1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136758
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>